TestCases/LLVMTests/SyntaxErrorTests/tests/test8.c
int main(){
1 +++ 9832;
1 (/ 362) + 32;
9896 * (99832;

897456 != > 2121;

5454 => 2123864;
745454 =< 458787;

100% != 100;

|334;
||433453;
34||;
3453||;
-;

}